--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap"
       rel="stylesheet"
     />
+    <base href="/frase-aleatoria/" />
   </head>
   <body class="w-screen h-screen">
     <div id="root" class="h-full w-full"></div>
